# brick

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  cog.toml  conda.yml  docker-compose.yml  pyproject.toml  requirements.txt  test-cicd
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md  other_issue.md  question_dev.md  question_user.md
.github/workflows/: cicd-dev.yml  cicd-prod.yml  release.yml  test.yml
app/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
app/src/: app.d.ts  app.html
app/src/lib/: data.ts  helpers.ts  types.ts
app/src/lib/brick/: Brick.svelte  data.ts  helpers.ts  types.ts
app/src/lib/session/: BrickInterface.svelte  DataControlPanel.svelte  FileTable.svelte  LandingPage.svelte  NewBlastRing.svelte  NewReferenceRing.svelte  RingControlPanel.svelte  helpers.ts  types.ts
app/src/lib/session/controls/helpers/: DeleteFile.svelte  DeleteRing.svelte  EditableRingSegment.svelte  EditableTitle.svelte  FontStyles.svelte  RingGenomadEdit.svelte  RingIndex.svelte  RingLabelEdit.svelte  RingLabelNew.svelte  RingSegment.svelte  RingSettings.svelte  RingTitle.svelte  RingVisibility.svelte
app/src/lib/session/controls/panels/: AboutPanel.svelte  DataControlPanel.svelte  PaletteControlPanel.svelte  PlotControlPanel.svelte  RingControlPanel.svelte
app/src/lib/session/controls/rings/: NewAnnotationRing.svelte  NewBlastRing.svelte  NewGenomadRing.svelte  NewLabelRing.svelte  NewReferenceRing.svelte
app/src/lib/session/controls/upload/: FileTable.svelte  (+1 more)
app/src/lib/session/modals/: NewSessionModal.svelte  SaveSessionModal.svelte
app/src/lib/session/palette/: ColorPalette.svelte  ColorPicker.svelte  PaletteDisplay.svelte  PalettePopup.svelte
app/src/lib/session/upload/: FileUpload.svelte
app/src/lib/stores/: FileDropzoneStateStore.ts  PaletteStore.ts  PlotConfigStore.ts  ReferencePositionStore.ts  RequestInProgressStore.ts  RingReferenceStore.ts  RingStore.ts  SessionFileStore.ts  TabIndexStore.ts  TooltipStore.ts  UploadInProgressStore.ts
app/src/lib/utils/: ColorPicker.svelte
app/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
app/src/routes/brick/: +layout.svelte  +page.svelte
app/src/routes/brick/[session]/: +page.server.ts  +page.svelte
app/src/routes/session/: +layout.svelte  +page.svelte
app/src/routes/session/[session]/: +page.server.ts  +page.svelte
app/themes/: dali.ts
brick/: brick.py  genomad.py  legacy.py  parsers.py  results.py  rings.py  terminal.py  utils.py
brick/api/: __init__.py  client.py  main.py  models.py  schemas.py  tasks.py  utils.py
brick/api/core/: celery.py  config.py  db.py
brick/api/endpoints/: files.py  rings.py  session.py  sessions.py  tasks.py  upload.py
celery/: worker.py
docker/: Dockerfile.app  Dockerfile.app.dev  Dockerfile.cleaner  Dockerfile.dbs  Dockerfile.server  brick.env  docker-compose.localhost.yml  docker-compose.traefik.localhost.yml  docker-compose.traefik.web.yml  docker-compose.traefik.yml  docker-compose.web.yml
docker/data/: default.json
docker/mongodb/: mongo-init.sh
docker/scripts/: cleanup.sh
docker/traefik/localhost/: dynamic.yml  static.yml
docker/traefik/web/: dynamic.yml  static.yml
env/: Dockerfile  Dockerfile.cleaner  conda.yml  docker-compose.yml
scripts/: deploy.sh  pre_bump.sh
tests/api_tests/: test_core_db.py  test_endpoint_rings.py  test_endpoint_sessions.py  test_endpoint_tasks.py
tests/core_tests/: test_utils.py
