[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brick"
version = "0.1.0"
authors = [{name="Eike Steinig", email="eike.steinig@unimelb.edu.au"}]
description = "BRICK implements BRIG-like interactive figures in D3 for bacterial genome visualization, annotation, comparison and exploration using a Python scripting API, CLI, REST API or UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer", 
  "biopython", 
  "pandas", 
  "requests", 
  "pre-commit", 
  "fastapi", 
  "redis",
  "celery[redis]", 
  "uvicorn", 
  "pydantic-settings", 
  "python-multipart", 
  "pymongo", 
  "motor",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "pytest-celery",
  "asgi-lifespan"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["brick*"] 
namespaces = false

[project.scripts]
brick = "brick.terminal:app"

[tool.pytest.ini_options]
testpaths = [
    "tests/api_tests",
    "tests/core_tests"
]
addopts = "-v"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

