[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brick"
version = "0.4.0"
authors = [{name="Eike Steinig", email="eike.steinig@unimelb.edu.au"}]
description = "BRICK implements BRIG-like interactive figures in D3 for bacterial genome visualization, annotation, comparison and exploration using a Python scripting API, CLI, REST API or UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer==0.9.0",
  "biopython==1.83",
  "pandas==2.1.4",
  "requests==2.31.0",
  "pre-commit==3.6.0",
  "fastapi==0.109.0",
  "redis==5.0.1",
  "celery[redis]==5.3.6",
  "uvicorn==0.25.0",
  "pydantic-settings==2.1.0",
  "python-multipart==0.0.6",
  "motor==3.3.2",
  "pytest==7.4.4",
  "pytest-asyncio==0.23.3",
  "httpx==0.26.0",
  "asgi-lifespan==2.1.0",
  "apscheduler==3.10.4",
  "strenum==0.4.15"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["brick*"] 
namespaces = false

[project.scripts]
brick = "brick.terminal:app"

[tool.pytest.ini_options]
testpaths = [
    "tests/api_tests",
    "tests/core_tests",
]
addopts = "-v"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.github
  | \.secrets
  | _build
  | buck-out
  | build
  | dist
  | app
  | docker
  | scripts
)/
'''

